syntax = "proto3";

option csharp_namespace = "Recorder";

message TimeSynchronization {
    uint64 time = 1;
}

message WarningRecord {
    string text = 1;
}

message MouseDevice {
    string Name = 1;
    uint64 Handle = 2;
}

message KeyboardDevice {
    string name = 1;
    uint64 handle = 2;
}

message HidDevice {
    string name = 1;
    uint64 handle = 2;
}

message MouseRecord {
    int64 Time = 1;
    int64 Handle = 2;
    uint32 Flags = 3;
    // ButtonFlags and ButtonData are u16, could be unpacked by consumer.
    uint32 ButtonFlags = 4;
    uint32 ButtonData = 5;
    uint32 Buttons = 6;
    sint32 X = 7;
    sint32 Y = 8;
    uint32 Extra = 9;
}

message KeyboardRecord {
    int64 Time = 1;
    int64 Handle = 2;
    uint32 Code = 3;
    uint32 Flags = 4;
    uint32 Reserved = 5;
    uint32 VKey = 6;
    uint32 Message = 7;
    uint32 Extra = 8;
}

message HidRecord {
    int64 Time = 1;
    int64 Handle = 2;
    uint32 Size = 3;
    uint32 Count = 4;
    bytes Data = 5;
}